Remove unnecessary comments and equals.